--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ body {
 
 /*about*/
 
-.about-me {
+.about {
     background-color: black;
     display: grid;
     grid-template-columns: repeat(2, .5fr);
@@ -258,7 +258,6 @@ body {
 .abtbtn-box:hover {
     box-shadow: 0 0 5px 2c906dcyan, 0 0 25px 2c906d, 0 0 50pc 2c906d, 0 0 100px 2c906d, 0 0 200px 2c906d;
 }
-
 
 /* Skills */
 #Skills {
